--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,8 +43,7 @@ jobs:
 
       - name: Create archive
         run: |
-          cd EcoTransportMod
-          zip -r ../EcoTransportMod-${VERSION_SAFE}.zip .
+          zip -r EcoTransport-${VERSION_SAFE}.zip EcoTransportMod
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
