--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.vars.outputs.VERSION_SAFE  }}
-          name: EcoTransportMod ${{ steps.vars.outputs.VERSION_SAFE  }}
-          files: EcoTransportMod-${{ steps.vars.outputs.VERSION_SAFE  }}.zip
+          name: EcoTransport ${{ steps.vars.outputs.VERSION_SAFE  }}
+          files: EcoTransport-${{ steps.vars.outputs.VERSION_SAFE  }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
